# postgres-ha

./: .gitignore  CLI_DEPLOYMENT.md  Cargo.toml  DASHBOARD_DEPLOY.md  DEPLOYMENT.md  MANUAL_DEPLOY.md  QUICK_REFERENCE.md  README.md  RFC-POSTGRES-HA.md  STRUCTURE.md  docker-compose.yml
.github/workflows/: build-and-push.yml
common/: Cargo.toml
common/src/: command.rs  config.rs  lib.rs  logging.rs  telemetry.rs
e2e/: .env.example  .gitignore  Dockerfile  package-lock.json  package.json  playwright.config.ts  railway.toml  tsconfig.json
e2e/src/: constants.ts  run-test.ts
e2e/src/pages/: index.ts  project.page.ts  service.page.ts  template.page.ts
e2e/src/utils/: database.ts  index.ts  patroni.ts  railway-api.ts  retry.ts
e2e/tests/: failover.spec.ts
etcd/: Cargo.toml  Dockerfile  entrypoint.sh
etcd-1/: railway.toml
etcd-2/: railway.toml
etcd-3/: Dockerfile  railway.toml
etcd/src/: bootstrap.rs  cluster.rs  config.rs  main.rs
failover-watcher/: Dockerfile  package.json  railway.toml
failover-watcher/src/: index.js
haproxy/: Cargo.toml  Dockerfile  entrypoint.sh
haproxy/src/: config.rs  main.rs  monitoring.rs  nodes.rs  template.rs
pgbouncer/: Dockerfile
pgpool/: Dockerfile  docker-entrypoint.sh  patroni-watcher.py  patroni-watcher.sh  pgpool.conf  pool_hba.conf  railway.toml  run.sh
postgres-patroni/: Cargo.toml  Dockerfile  Dockerfile.13  Dockerfile.14  Dockerfile.15  Dockerfile.16  Dockerfile.17  docker-entrypoint.sh  get-postgres-version.sh  init-ssl.sh  patroni-runner.sh  patroni.yml  post_bootstrap.sh  railway.toml  supervisord.conf  wrapper.sh
postgres-patroni/src/: lib.rs  paths.rs  ssl.rs
postgres-patroni/src/bootstrap/: config.rs  mod.rs  sql.rs
postgres-patroni/src/patroni/: config.rs  health.rs  mod.rs  monitoring.rs  yaml.rs
scripts/: deploy-pgpool.sh  deploy-postgres-1.sh  deploy-postgres-2.sh  deploy-postgres-3.sh  set-shared-variables.sh
