[workspace]
resolver = "2"
members = [
    "common",
    "etcd",
    "haproxy",
    "postgres-patroni",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "process", "time", "fs", "io-util", "signal", "net"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Time
chrono = { version = "0.4", features = ["clock"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Unix
nix = { version = "0.29", features = ["signal", "process"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
