[package]
name = "etcd-entrypoint"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "etcd-entrypoint"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
nix = { version = "0.29", features = ["signal", "process"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "process", "time", "fs", "io-util", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
